--- a/A6/A6.html
+++ b/A6/A6.html
@@ -10,9 +10,9 @@
 <body>
     <h1>Fun Dance Animation</h1>
     <p>I found this fun video of a <strong> teddy bear dancing </strong>. I enjoy dance and technology. The <a href="https://www.youtube.com/watch?v=Ebx2qbBlvh0" title="3dmodel Video"> 3d modelling</a> and animation skills used to create this is really cool.
-    <video width="900" height="500" controls>
-        <source src="Bear.mp4" type="video/mp4" />
-      </video>
+    <video controls="" width=900" height="500" muted="" loop="" autoplay="">
+<source src="https://github.com/prba2567/Universal-Design-/A6/Bear.mp4" type="video/mp4">
+</video>
     
 </body>
 </html>
